basic structure ready

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,28 +6,26 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
+    background-color: whitesmoke;
 }
 
-.underline-animation {
-    position: relative;
-    display: inline-block;
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
 
-.underline-animation::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 50%;
-    background-color: rgb(178, 126, 241);
-    opacity: 0.7;
-    z-index: -1;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.3s ease-in-out;
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
 }
 
-.group:hover .underline-animation::after {
-    transform: scaleX(1);
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body.no-scroll {
+    overflow: hidden;
 }
